@@ -1,6 +1,7 @@
 Change log next release
 -----------------------
 * Upgrading scribe dependencies to latest version 2.4.0 (thanks to Aniket for pull request)
+* Added ability to specify an empty access token for OAuth1 authentication. Use com.jayway.restassured.config.OAuthConfig#addEmptyTokenToBaseString(boolean) to configure this.
 
 Change log 2.9.0 (2016-03-04)
 -----------------------------
